--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.log
 
 # sbt specific
-.cache
-.history
+.cache/
+.history/
 .lib/
 dist/*
 target/
@@ -11,6 +11,8 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+
+.ensime_cache/
 
 # Scala-IDE specific
 .scala_dependencies
